--- a/bower.json
+++ b/bower.json
@@ -5,6 +5,7 @@
     "normalize-css": "~2.1.3",
     "ember": "~1.3.1",
     "handlebars": "~1.3.0",
-    "jquery": "~2.0.3"
+    "jquery": "~2.0.3",
+    "showdown": "~0.3.1"
   }
 }
