--- a/bower.json
+++ b/bower.json
@@ -6,6 +6,7 @@
     "ember": "~1.3.1",
     "handlebars": "~1.3.0",
     "jquery": "~2.0.3",
-    "showdown": "~0.3.1"
+    "showdown": "~0.3.1",
+    "ember-data": "~0.0.14"
   }
 }
