--- a/bower.json
+++ b/bower.json
@@ -1,11 +1,11 @@
 {
-  "name": "rough",
-  "version": "0.0.0",
+  "name": "rough-ember",
+  "version": "0.0.1",
   "dependencies": {
-    "normalize-css": "~2.1.3",
+    "normalize-css": "~3.0.0",
     "ember": "~1.3.1",
     "handlebars": "~1.3.0",
-    "jquery": "~2.0.3",
+    "jquery": "~2.1.0",
     "showdown": "~0.3.1",
     "ember-data": "~0.0.14"
   }
