--- a/bower.json
+++ b/bower.json
@@ -3,10 +3,9 @@
   "version": "0.0.1",
   "dependencies": {
     "normalize-css": "~3.0.0",
-    "ember": "~1.3.1",
-    "handlebars": "~1.3.0",
-    "jquery": "~2.1.0",
     "showdown": "~0.3.1",
-    "ember-data": "~0.0.14"
+    "jquery": "~2.0.1",
+    "ember": "~1.4.0-beta.2",
+    "ember-data": "~1.0.0-beta.6"
   }
 }
