--- a/package.json
+++ b/package.json
@@ -1,14 +1,13 @@
 {
   "name": "rough",
   "version": "0.1.0",
-  "dependencies": {
-    "gulp-sass": "~0.6.0"
-  },
+  "dependencies": {},
   "devDependencies": {
     "gulp": "~3.5.0",
     "gulp-minify-css": "~0.2.0",
     "gulp-load-plugins": "~0.2.0",
     "gulp-jshint": "~1.3.4",
+    "gulp-sass": "~0.6.0",
     "jshint-stylish": "~0.1.5",
     "gulp-autoprefixer": "0.0.6",
     "gulp-clean": "~0.2.4",
@@ -19,10 +18,10 @@
     "gulp-livereload": "~0.3.1",
     "gulp-ruby-sass": "~0.2.0",
     "tiny-lr": "0.0.5",
-    "connect-livereload": "~0.3.2",
     "open": "0.0.4",
     "connect": "~2.12.0",
     "gulp-concat": "~2.1.7",
-    "gulp-ember-handlebars": "~0.4.1"
+    "gulp-ember-handlebars": "~0.4.1",
+    "gulp-util": "~2.2.13"
   }
 }
