--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "dependencies": {},
   "devDependencies": {
     "gulp": "~3.5.0",
-    "gulp-minify-css": "~0.2.0",
     "gulp-load-plugins": "~0.2.0",
     "gulp-jshint": "~1.3.4",
     "gulp-sass": "~0.6.0",
@@ -22,6 +21,7 @@
     "connect": "~2.12.0",
     "gulp-concat": "~2.1.7",
     "gulp-ember-handlebars": "~0.4.1",
-    "gulp-util": "~2.2.13"
+    "gulp-util": "~2.2.13",
+    "gulp-csso": "~0.2.3"
   }
 }
