--- a/package.json
+++ b/package.json
@@ -1,29 +1,29 @@
 {
-  "name": "rough",
+  "name": "rough-ember",
   "version": "0.1.0",
   "dependencies": {
     "gulp": "~3.5.1"
   },
   "devDependencies": {
-    "gulp": "~3.5.0",
-    "gulp-load-plugins": "~0.2.0",
-    "gulp-jshint": "~1.3.4",
-    "gulp-sass": "~0.6.0",
+    "gulp-connect": "~0.8.0",
+    "gulp-bundle": "~0.2.2",
+    "gulp": "~3.5.2",
+    "gulp-load-plugins": "~0.3.0",
+    "gulp-jshint": "~1.4.0",
+    "gulp-sass": "~0.7.0",
     "jshint-stylish": "~0.1.5",
     "gulp-autoprefixer": "0.0.6",
     "gulp-clean": "~0.2.4",
-    "gulp-rename": "~0.2.2",
-    "gulp-uglify": "~0.2.0",
-    "gulp-notify": "~0.4.0",
+    "gulp-rename": "~1.0.0",
     "gulp-watch": "~0.5.0",
-    "gulp-livereload": "~0.3.1",
-    "gulp-ruby-sass": "~0.2.0",
-    "tiny-lr": "0.0.5",
-    "open": "0.0.4",
-    "connect": "~2.12.0",
+    "gulp-livereload": "~1.1.1",
+    "gulp-ruby-sass": "~0.3.0",
+    "gulp-ember-handlebars": "~0.5.1",
+    "gulp-util": "~2.2.14",
+    "gulp-useref": "~0.1.2",
+    "concat": "~0.2.4",
     "gulp-concat": "~2.1.7",
-    "gulp-ember-handlebars": "~0.4.1",
-    "gulp-util": "~2.2.13",
-    "gulp-csso": "~0.2.3"
+    "gulp-handlebars": "~1.0.2",
+    "gulp-declare": "~0.1.0"
   }
 }
