--- a/package.json
+++ b/package.json
@@ -5,20 +5,20 @@
     "gulp": "~3.5.1"
   },
   "devDependencies": {
-    "gulp-connect": "~0.8.0",
+    "gulp-connect": "~1.0.3",
     "gulp-bundle": "~0.2.2",
     "gulp": "~3.5.2",
     "gulp-load-plugins": "~0.3.0",
-    "gulp-jshint": "~1.4.0",
+    "gulp-jshint": "~1.4.2",
     "gulp-sass": "~0.7.0",
     "jshint-stylish": "~0.1.5",
     "gulp-autoprefixer": "0.0.6",
     "gulp-clean": "~0.2.4",
-    "gulp-rename": "~1.0.0",
+    "gulp-rename": "~1.1.0",
     "gulp-watch": "~0.5.0",
     "gulp-livereload": "~1.1.1",
-    "gulp-ruby-sass": "~0.3.0",
-    "gulp-ember-handlebars": "~0.5.1",
+    "gulp-ruby-sass": "~0.3.1",
+    "gulp-ember-handlebars": "^0.5.1",
     "gulp-util": "~2.2.14",
     "gulp-useref": "~0.1.2",
     "concat": "~0.2.4",
